--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -409,3 +409,25 @@
   institute={Polish Academy of Sciences},
   address={Warszaw}
 }
+
+@article{caha2013,
+  title = {Explaining the structure of case paradigms by the mechanisms of Nanosyntax},
+  volume = {31},
+  journal = {Natural Language and Linguistic Theory},
+  author = {Caha, Pavel},
+  year = {2013},
+  pages = {1015-1066},
+  doi={10.1007/s11049-013-9206-8}
+}
+
+
+@article{vanbaal2018,
+  title={Universals in possessive morphology},
+  author={Van Baal, Yvonne and Don, Jan},
+  journal={Glossa: a journal of general linguistics},
+  volume={3},
+  number={1},
+  pages={1--19},
+  year={2018},
+  doi={10.5334/gjgl.395}
+}
