--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -456,48 +456,9 @@ Crucially, to the best of my knowledge, there is no language in which the nomina
 
 \begin{table}[ht]
   \center
-  \caption {Syncretism in \ac{nom} --- \ac{acc} --- \ac{dat}}
-    \begin{tabular}{cccccccc}
-      \toprule
-          \multicolumn{3}{c}{pattern}
-            & \ac{nom}
-            & \ac{acc}
-            & \ac{dat}
-            & translation
-            & language \\
-      \cmidrule(lr){1-3} \cmidrule(lr){4-6} \cmidrule(lr){7-7} \cmidrule(lr){8-8}
-          A & A & A
-            & \cellcolor{LG}jullie
-            & \cellcolor{LG}jullie
-            & \cellcolor{LG}jullie
-            & 2\ac{pl}
-            & Dutch \\
-          A & A & B
-            & \cellcolor{LG}sie
-            & \cellcolor{LG}sie
-            & ihr
-            & 3\ac{sg}.\ac{f}
-            & German \\
-          A & B & B
-            & við
-            & \cellcolor{LG}okkur
-            & \cellcolor{LG}okkur
-            & 1\ac{pl}
-            & Icelandic \\
-          A & B & C
-            & tú
-            & teg
-            & tær
-            & 2\ac{sg}
-            & Faroese \\
-          A & B & A
-            & \cellcolor{LG}
-            &
-            & \cellcolor{LG}
-            &
-            & not attested \\
-      \bottomrule
-    \end{tabular}\label{tbl:syncretisms}
+  \caption {}
+    \input{tables/syncretism-nom-acc-dat.tex}
+  \label{tbl:syncretisms}
 \end{table}
 
 In sum, case syncretism follows the ordering of the case scale in headless relatives: \ac{nom} < \ac{acc} < \ac{dat}.
@@ -515,24 +476,9 @@ The third person singular and first person plural show the same pattern. The acc
 
 \begin{table}[ht]
   \center
-	\caption {Case containment in Khanty}
-		\begin{tabular}{clll}
-		\toprule
-              & \ac{1}\ac{sg}
-              & \ac{3}\ac{sg}
-              & \ac{1}\ac{pl}                           \\
-		          \cmidrule{2-4}
-    \ac{nom}  & ma
-              & luw
-              & muŋ                                     \\
-    \ac{acc}  & ma:\tbf{-ne:m}
-              & luw\tbf{-e:l}
-              & muŋ\tbf{-e:w}                           \\
-    \ac{dat}  & ma:\tbf{-ne:m}\tcol{DG}{\tbf{-na}}
-              & luw\tbf{-e:l}\tcol{DG}{\tbf{-na}}
-              & muŋ\tbf{-e:w}\tcol{DG}{\tbf{-na}}       \\
-		\bottomrule
-  \end{tabular}\label{tbl:cont-khanty}
+  \caption {Case containment in Khanty}
+    \input{tables/containment-nom-acc-dat.tex}
+  \label{tbl:cont-khanty}
 \end{table}
 
 Other languages that show this phenomenon are West Tocharian \citep{gippert1987} and Vlakh and Kalderaš Romani (respectively \citealt{friedman1991} and \citealt{boretzky1994}).
