aantal dingen aangepast in wat ik al had
morgen weer verder met nieuwe stuk

--- a/case-decomposition-meets-ellipsis.tex
+++ b/case-decomposition-meets-ellipsis.tex
@@ -241,13 +241,18 @@ then dative
 
 basic background on matching in nano
 
+phrasal spellout
+multiple features with a single element
+
+faroese all different
+
+
+
+
 \ex. \tbf{The Superset Principle} \citet{starke2009}:\\
 A lexically stored tree matches a syntactic node iff the lexically stored tree contains the syntactic node.
 
 What the Superset Principle states is that matching between a lexical tree and a syntactic tree does not require full identity, but ‘only’ containment.
-
-\ex. \tbf{The Elsewhere Condition} (\citealt{kiparsky1973}, formulated as in \citealt{caha2019}):\\
-When two entries can spell out a given node, the more specific entry wins. Under the Superset Principle governed insertion, the more specific entry is the one which has fewer unused features.
 
 \begin{table}[ht]
   \center
@@ -256,20 +261,16 @@ When two entries can spell out a given node, the more specific entry wins. Under
   \label{tbl:syncretisms-derive}
 \end{table}
 
+jullie: a single lexical entry for all
 
-but what about the syncretism patterns?
+\ex. \tbf{The Elsewhere Condition} (\citealt{kiparsky1973}, formulated as in \citealt{caha2019}):\\
+When two entries can spell out a given node, the more specific entry wins. Under the Superset Principle governed insertion, the more specific entry is the one which has fewer unused features.
 
-we want to start out with the same syntax
+sie for acc
+ihr for dat
 
-with phrasal spellout, we spell out multiple heads at once
-
-this is how that works in nanosyntax
-
-
-
-
-
-
+okkur for dat
+vidxd for nom
 
 
 
