--- a/thesis.tex
+++ b/thesis.tex
@@ -39,11 +39,11 @@
 
 \include{introduction}
 
-\part{The winner of the competition}\label{part:complexity}
+\part{The constant winner}\label{part:complexity}
 \include{recurring-pattern}
 \include{case-decomposition-meets-ellipsis}
 
-\part{The competitors in the competition}\label{part:direction}
+\part{The varying participants}\label{part:direction}
 \include{variation}
 \include{morphology-syntax}
 
