--- a/introduction.tex
+++ b/introduction.tex
@@ -25,20 +25,20 @@ In \ref{ex:german-case-2}, the grammatical roles are reversed: \tit{der} in \tit
  the.\ac{nom} teacher likes the.\ac{acc} student\\
  `The teacher likes the pupil.'\label{ex:german-case-1}
 \bg. Der Schüler mag den Lehrer.\\
- the.\ac{nom} student likes the.\ac{acc}\\
+ the.\ac{nom} student likes the.\ac{acc} teacher\\
  `The pupil likes the teacher.'\label{ex:german-case-2}
 
 Not only full noun phrases, but also other elements can be marked for case, such as relative pronouns. Modern German marks relative pronouns, just like full noun phrases, for the grammatical role they have in the clause. Consider the two sentences in \ref{ex:german-relatives}. These two sentences both contain a main clause that is modified by a relative clause.
-In \ref{ex:german-relative-1}, the relative clause \tit{der nach draußen guckt} `that looks outside' modifies \tit{den Schüler} `the pupil'. \tit{Schüler} `pupil` is called the head (noun) or the antecedent of the relative clause. \tit{Den} in \tit{den Schüler} `the pupil` appears in accusative case, because it is the descriptive object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{der} `that.\ac{nom}' appears in nominative case, because it is the descriptive subject of in the relative clause.
+In \ref{ex:german-relative-1}, the relative clause \tit{der nach draußen guckt} `that looks outside' modifies \tit{den Schüler} `the pupil'. \tit{Schüler} `pupil` is called the head (noun) or the antecedent of the relative clause. \tit{Den} in \tit{den Schüler} `the pupil` appears in accusative case, because it is the descriptive object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{der} `\ac{rel}.\ac{nom}.\ac{sg}.\ac{m}' appears in nominative case, because it is the descriptive subject of in the relative clause.
 
-In \ref{ex:german-relative-2}, the relative clause \tit{den er beim Verstecktspiel sucht} `that he is searching for playing hide-and-seek' modifies \tit{den Schüler} `the pupil'. \tit{Den} in \tit{den Schüler} `the pupil` appears again in accusative, because it is the descriptive object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{den} `that.\ac{acc}' appears in accusative case, because it is the descriptive object of \tit{sucht} `searches' in the relative clause.
+In \ref{ex:german-relative-2}, the relative clause \tit{den er beim Verstecktspiel sucht} `that he is searching for playing hide-and-seek' modifies \tit{den Schüler} `the pupil'. \tit{Den} in \tit{den Schüler} `the pupil` appears again in accusative, because it is the descriptive object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{den} `\ac{rel}.\ac{acc}.\ac{sg}.\ac{m}' appears in accusative case, because it is the descriptive object of \tit{sucht} `searches' in the relative clause.
 
 \ex.\label{ex:german-relatives}
 \ag. Der Lehrer mag den Schüler, der nach draußen guckt.\\
- the.\ac{nom} teacher likes the.\ac{acc} student that.\ac{nom} to outside looks\\
+ the.\ac{nom} teacher likes the.\ac{acc} student \ac{rel}.\ac{nom}.\ac{sg}.\ac{m} to outside looks\\
  `The teacher likes the pupil that is looking outside.'\label{ex:german-relative-1}
  \bg. Der Lehrer mag den Schüler, den er beim Versteckspiel sucht.\\
- the.\ac{nom} teacher likes the.\ac{acc} student that.\ac{acc} he {at the} {hide-and-seek game} searches\\
+ the.\ac{nom} teacher likes the.\ac{acc} student \ac{rel}.\ac{acc}.\ac{sg}.\ac{m} he {at the} {hide-and-seek game} searches\\
  `The teacher likes the pupil that he is searching for playing hide-and-seek.'\label{ex:german-relative-2}
 
 Compare the two sentences in \ref{ex:german-relatives}. In both sentences the head is marked as accusative because it is the descriptive object in the main clause. The case of the relative pronoun in \ref{ex:german-relative-2} is also accusative, because it is the descriptive object in the relative clause. The case of the relative pronoun in \ref{ex:german-relative-1} is nominative, because it is the descriptive subject in the relative clause. So, the case of the relative pronoun in \ref{ex:german-relative-1} differs from the case of the head.
@@ -46,14 +46,17 @@ Compare the two sentences in \ref{ex:german-relatives}. In both sentences the he
 The focus of this dissertation lies on headless relatives. As the name suggests, this type of relative clause lacks a head.\footnote{
 This `missing noun' has been interpreted in two different ways. Some researchers argue that the noun is truly missing, it is absent, cf. \citealt{citko2005,vanriemsdijk2006}. Others claim that there is actually a head, but it is phonologically zero, \citealt{bresnan1978,groos1981,grosu2003}. At this point in the discussion this distinction is not relevant. I return to the issue in Chapter \ref{ch:connecting}.
 }
-I give an example of a headless relative in Gothic in \ref{ex:gothic-acc-acc}. The relative clause is \tit{þan -ei arma} `who I pity', marked in bold. There is no head that this relative clause modifies, because it is a headless relative. This is different from the examples from German I gave above, which each had a head.
+Even though Modern German also has case competition in headless relatives, I turn to Gothic now. The first part of the dissertation can be illustrated best with Gothic, and not with the Modern German, in which the pattern differs slightly.
+
+I give an example of a headless relative in Gothic in \ref{ex:gothic-acc-acc}.
+There is no head that this relative clause modifies, because it is a headless relative. This is different from the examples from German I gave above, which each had a head.
 The predicate \tit{arma} `pity' takes accusative objects, as indicated by the subscript on the gloss of the verb. The predicate \tit{gaarma} `pity' also takes accusative objects, indicated again by the subscript.
-The relative pronoun \tit{þan(a)} `who.\ac{acc}' appears in accusative case.\footnote{
+The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{acc}.\ac{m}' appears in accusative case.\footnote{
 The relative pronoun without the complementizer \tit{-ei} is \tit{þana}. Therefore, I refer to the relative pronoun as \tit{þan(a)}.
 }
 
-\exg. gaarma þan \tbf{-ei} \tbf{arma}\\
- pity\scsub{[acc]} who.\ac{acc} -\ac{comp} pity\scsub{[acc]}\\
+\exg. gaarma þan -ei arma\\
+ pity\scsub{[acc]} \ac{rel}.\ac{acc}.\ac{sg}.\ac{m} -\ac{comp} pity\scsub{[acc]}\\
  `I will pity (him) whom I pity' \flushfill{Gothic, \ac{rom} 9:15, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-acc-acc}
 
 Where does this accusative case come from? Logically speaking, there are two possible sources: the predicate in the main clause \tit{gaarma} `pity', the predicate in the relative clause \tit{arma} `pity' or both predicates. From now on, I use the terms internal and external case to refer to these two possible case sources.
@@ -68,24 +71,24 @@ Later on I will argue that this indirect process is ellipsis.
 }
 This means that the internal and external case come together on the relative pronoun. In other words, there is case competition going on in headless relatives. \ref{ex:gothic-acc-acc} is indeed the first example I gave of case competition in a headless relative. It is an uninteresting one, because the two competing cases are identical.
 
-Consider the example in \ref{ex:gothic-acc-dat}, in which the internal case is dative and the external case is accusative. The relative clause \tit{ana þammei lag} `on which he lay' is marked in bold.
+Consider the example in \ref{ex:gothic-acc-dat}, in which the internal case is dative and the external case is accusative.
 The internal case is dative. The preposition \tit{ana} `on' takes dative objects, as indicated by the subscript on the preposition.
 The external case is accusative. The predicate \tit{ushafjands} `picking up' takes accusative objects, indicated by the subscript on the predicate.
-The relative pronoun \tit{þamm(a)} appears in dative. This dative can only come from the preposition \tit{ana} `on'. The dative is the internal case here.
+The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{sg}.\ac{n}' appears in dative. This dative can only come from the preposition \tit{ana} `on', which is the internal case here. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
 \exg. ushafjands \tbf{ana} \tbf{þamm} \tbf{-ei} \tbf{lag}\\
- {picking up}\scsub{[acc]} on\scsub{[dat]} what.\ac{dat} -\ac{comp} lay\\
+ {picking up}\scsub{[acc]} on\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{sg}.\ac{n} -\ac{comp} lay\\
  `picking up (that) on which he lay' \flushfill{Gothic, \ac{luke} 5:25, adapted from \pgcitealt{harbert1978}{343}}\label{ex:gothic-acc-dat}
 
 The conclusion that follows is that the relative pronoun can take the internal case. At this point it remains unclear what happened to the external accusative case.
 
-Now consider the example in \ref{ex:gothic-dat-acc}, in which the internal case is accusative and the external case is dative. The relative clause \tit{þammei qiþiþ þiudan Iudaie} `whom you call King of the Jews' is marked in bold.
+Now consider the example in \ref{ex:gothic-dat-acc}, in which the internal case is accusative and the external case is dative.
 The internal case is accusative. The predicate \tit{qiþiþ} `say' takes accusative objects, as indicated by the subscript on the predicate.
 The external case is dative. The predicate \tit{taujau} `do' takes dative indirect objects, as indicated by the subscript on the predicate.
-The relative pronoun \tit{þamm(a)} appears in the dative case. This dative can only come from the predicate \tit{taujau} `do'. The dative is the external case here.
+The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{sg}.\ac{m}' appears in the dative case. This dative can only come from the predicate \tit{taujau} `do', which is the external case here. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
 \exg. hva nu wileiþ ei taujau þamm \tbf{-ei} \tbf{qiþiþ} \tbf{þiudan} \tbf{Iudaie}?\\
- what now want that do\scsub{[dat]} who.\ac{dat} -\ac{comp} say\scsub{[acc]} king {of Jews}\\
+ what now want that do\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{sg}.\ac{m} -\ac{comp} say\scsub{[acc]} king {of Jews}\\
  `what now do you wish that I do to (him) whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-dat-acc}
 
 The conclusion that follows is that the relative pronoun can take the external case. At this point it remains unclear what happened to the internal accusative case.
@@ -96,7 +99,7 @@ In the next section, I discuss the content of this dissertation. Before that, I 
 For \tit{ushafjands} `picking up' \ref{ex:gothic-acc-acc} the subscript indicates which case the complement of the verb appears in. The subscript on \tit{taujau} `do' \ref{ex:gothic-dat-acc} in refers to the case of the indirect object of the predicate. Another possibility is that the subscript is placed on a preposition and refers to the case the preposition combines with, as for \tit{ana} `on' in \ref{ex:gothic-acc-dat}. A last possibility is that the subscript is [\ac{nom}] and refers to the case the descriptive subject appears in, of which examples will emerge in the next chapter.
 In other words, the subscript can refer several elements: a subject, object or indirect object of a predicate. There is no overarching theoretical notion that the subscript makes reference to. The subscript simply indicates which case is required within the (main or relative) clause.
 
-Second, I write the relative clause in bold. When the relative pronoun takes the internal case, I mark it in bold as well, as shown in \ref{ex:gothic-acc-dat}. When the relative pronoun takes the external case, I leave it black, indicating it patterns with the main clause. An example of that is \ref{ex:gothic-dat-acc}. When the internal and external case are the same, the relative pronoun should be black and bold. As this is impossible, I choose to mark it black, as shown in \ref{ex:gothic-acc-acc}.
+Second, I write the relative clause in bold. When the relative pronoun takes the internal case, I mark it in bold as well, as shown in \ref{ex:gothic-acc-dat}. When the relative pronoun takes the external case, I leave it black, indicating it patterns with the main clause. An example of that is \ref{ex:gothic-dat-acc}.
 
 
 \section{The content of this dissertation}
